# Drone-proyect

./: .env.example  .gitignore  HOW_IT_WORKS.md  LAYERS.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/src/: __init__.py  config.py  dependencies.py  main.py
api/src/core/: __init__.py  exceptions.py
api/src/db/: __init__.py  influxdb.py  postgres.py
api/src/models/: __init__.py  alert.py  drone.py  mission.py
api/src/routers/: __init__.py  alerts.py  drones.py  kpis.py  missions.py  telemetry.py  websocket.py
api/src/schemas/: __init__.py  alert_schema.py  drone_schema.py  mission_schema.py  telemetry_schema.py
api/src/services/: __init__.py  alert_service.py  drone_service.py  mission_service.py  telemetry_service.py
api/tests/: test_drones.py  test_missions.py  test_telemetry.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts
simulator/: Dockerfile  pyproject.toml
simulator/src/: __init__.py  config.py  main.py  mission_loader.py
simulator/src/constants/: __init__.py  drone_specs.py  material_properties.py  motor_specs.py
simulator/src/engines/: __init__.py  material_engine.py  physics_engine.py  structural_engine.py
simulator/src/models/: __init__.py  drone_state.py  impact.py  material.py  motor.py
simulator/src/writers/: __init__.py  influxdb_writer.py
simulator/tests/: test_material_engine.py  test_physics_engine.py  test_structural_engine.py
(+55 files in other folders)
