[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-simulator"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "influxdb-client[async]>=1.40.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
